# competitive-cpp

./: CMakeLists.txt  README.md
include/: solution.hpp
src/: main.cpp  solution.cpp
tests/: solution_test.cpp
